--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Goa</h1>
+	<br/>
+	<p>
+		Goa is beautifull place
+	</p>
+	<ol>
+		<li>
+			<i>amritsar</i> 
+		</li>
+		<li>
+			<strong>punjab</strong> 
+		</li>
+		<li>
+			<b>lahore</b> 
+		</li>
+		<li>
+			<i>goa</i> 
+		</li>
+		<li>
+			<b>lahore</b> 
+		</li>
+	</ol>
+	<ul>
+		<li>
+			<i>amritsar</i> 
+		</li>
+		<li>
+			<strong>punjab</strong> 
+		</li>
+		<li>
+			<b>lahore</b> 
+		</li>
+		<li>
+			<i>goa</i> 
+		</li>
+		<li>
+			<b>lahore</b> 
+		</li>
+	</ul>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
